# tinycolors

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/api/: index.doctree
docs/_build/doctrees/api/tinycolors/: index.doctree
docs/_build/doctrees/api/tinycolors/main/: index.doctree
docs/_build/doctrees/api/tinycolors/tprint/: index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  tinycolors.html
docs/_build/html/_modules/tinycolors/: main.html  tprint.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/api/: index.rst.txt
docs/_build/html/_sources/api/tinycolors/: index.rst.txt
docs/_build/html/_sources/api/tinycolors/main/: index.rst.txt
docs/_build/html/_sources/api/tinycolors/tprint/: index.rst.txt
docs/_build/html/api/: index.html
docs/_build/html/api/tinycolors/: index.html
docs/_build/html/api/tinycolors/main/: index.html
docs/_build/html/api/tinycolors/tprint/: index.html
tests/v0.5.0/basic/: DELIVERY_SUMMARY.txt  ENHANCEMENT_SUMMARY.md  basic_test_new_api.py  demo_new_api.py
tests/v0.5.0/suite/: QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  TEST_SUITE_SUMMARY.md  test_tinycolors.py
tinycolors/: __init__.py  exists.py  main.py  stringable.py  tprint.py
