[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinycolors"
version = "0.6.0"
description = "A tiny, useful, and readable color library for fast colors"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Razka Rizaldi", email = "razka.rizaldis@gmail.com"}
]
keywords = ["color", "ansi", "terminal", "console", "colorize", "formatting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/tyydev1/tinycolors"
Repository = "https://github.com/tyydev1/tinycolors"
Issues = "https://github.com/tyydev1/tinycolors/issues"
